# axonmind-open

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.zh.md  codex_session_options.example.json  env_example  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/axonmind_cli/: Cargo.toml
crates/axonmind_cli/src/: main.rs  mcp_server.rs
crates/axonmind_core/: Cargo.toml
crates/axonmind_core/bindings/: Confidence.ts  Evidence.ts  EvidenceId.ts  KpiAttrs.ts  KpiStatus.ts  KpiTrend.ts  KpiUnit.ts  Node.ts  NodeKind.ts  Period.ts  SourceType.ts
crates/axonmind_core/src/: confidence.rs  edge.rs  error.rs  evidence.rs  kpi.rs  lib.rs  node.rs
crates/axonmind_engine/: Cargo.toml
crates/axonmind_engine/bindings/: AffectedNode.ts  ConflictPair.ts  DiffCounts.ts  DiffSection.ts  Edge.ts  EdgeChange.ts  EdgeId.ts  EdgeKind.ts  EdgeWithEvidence.ts  EdgeWithNodes.ts  ExplainKpiInput.ts  ExplainKpiOutput.ts  ExtractorKind.ts  FindConflictsInput.ts  FindConflictsOutput.ts  FocusKpiInput.ts  FocusKpiOutput.ts  GetEvidenceInput.ts  GetEvidenceOutput.ts  GraphDiff.ts  GraphSearchInput.ts  GraphSearchOutput.ts  GraphStatsOutput.ts  ImpactRadiusInput.ts  ImpactRadiusOutput.ts  NodeChange.ts  NodeId.ts  NodeKindCount.ts  ReasoningSearchInput.ts  ReasoningSearchOutput.ts  RetrievedSection.ts  SearchMatchKind.ts  SuggestActionsInput.ts  SuggestActionsOutput.ts  TraceDecisionInput.ts  TraceDecisionOutput.ts
crates/axonmind_engine/src/: brain_map.rs  config.rs  events.rs  lib.rs  util.rs
crates/axonmind_engine/src/extract/: bridge.rs  fingerprint.rs  insurance_toy.rs  llm.rs  mod.rs  normalize.rs  openai.rs  relation.rs  rules.rs  seeyoo.rs  semantic.rs  summarize.rs  value_parse.rs
crates/axonmind_engine/src/extract/prompts/: categorize.optimization.md  categorize.output.md  categorize.rules.md  categorize.system.md  mod.rs
crates/axonmind_engine/src/ingest/: docx.rs  html.rs  image.rs  markdown.rs  mod.rs  pdf.rs  queue.rs  spreadsheet.rs  txt.rs
crates/axonmind_engine/src/mcp/: mod.rs  schemas.rs  tools.rs
crates/axonmind_engine/src/pageindex/: enrich.rs  mod.rs  search.rs  store.rs  tree.rs
crates/axonmind_engine/src/query/: conflicts.rs  diff.rs  evidence.rs  focus.rs  impact.rs  mod.rs  reasoning.rs  search.rs
crates/axonmind_engine/src/store/: generations.rs  graph_cache.rs  migrations.rs  mod.rs  sqlite.rs
crates/axonmind_engine/src/workers/: kpi_discovery.rs  kpi_recompute.rs  mod.rs
crates/axonmind_engine/tests/: conflicts.rs  diff.rs  integration.rs  mcp.rs  pageindex.rs  query.rs
crates/axonmind_tauri/: Cargo.toml
crates/axonmind_tauri/src/: cli_auth.rs  commands.rs  events.rs  lib.rs  lifecycle.rs
crates/seeyoo_llm/: Cargo.toml
crates/seeyoo_llm/src/: anthropic_api.rs  api_mod.rs  codex_api.rs  errors.rs  factory.rs  gemini_api.rs  lib.rs  local_detect.rs  ollama_api.rs  openai_api.rs  retry.rs  types.rs
docs/: architecture.md
fixtures/: sample.md
migrations/: 001_initial.sql  002_structural_sha256.sql  003_generations.sql  004_metric_values_as_of.sql  005_llm_review_flag_backfill.sql  006_page_index.sql
src/: App.tsx  AppShell.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConflictsModal.tsx  ContentSearchModal.tsx  DiffToast.tsx  DocumentsView.tsx  DropZone.tsx  FileVisualizationModal.tsx  FolderSummaryModal.tsx  GenerationStaging.tsx  GraphDiffModal.tsx  InspectorPanel.tsx  SettingsModal.tsx  ViewSwitch.tsx
src/components/graph/: AxonGraphView.tsx  BrainMapView.tsx  style.ts
