[workspace]
members = [
    "crates/axonmind_core",
    "crates/axonmind_engine",
    "crates/axonmind_tauri",
    "crates/axonmind_cli",
    "crates/seeyoo_llm",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SeeyooHK/axonmind-open"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
calamine = "0.25"
comrak = "0.29"
scraper    = "0.21"
tesseract  = "0.14"
deadpool-sqlite = "0.13"
undoc = "0.3"
eventsource-stream = "0.2"
futures-util = "0.3"
petgraph = "0.6"
rand = "0.8"
unpdf = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls-vendored", "stream"] }
rmp-serde = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ts-rs = { version = "12.0.1", features = ["chrono-impl", "serde-json-impl"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
tempfile = "3"

axonmind_core   = { path = "crates/axonmind_core", version = "0.1.0" }
axonmind_engine = { path = "crates/axonmind_engine", version = "0.1.0" }
seeyoo_llm      = { path = "crates/seeyoo_llm",     version = "0.1.0" }
