[package]
name = "axonmind-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Tauri v2 host app for axonmind-open."
publish = false

[lib]
name = "axonmind_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axonmind_tauri  = { path = "../crates/axonmind_tauri", features = ["tauri"] }
axonmind_engine = { workspace = true }
tauri           = { version = "2", features = [] }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
