[package]
name = "axonmind_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for indexing, querying, importing, and exporting local workspaces"

[[bin]]
name = "axonmind"
path = "src/main.rs"

[dependencies]
axonmind_core   = { workspace = true }
axonmind_engine = { workspace = true }
anyhow          = { workspace = true }
clap            = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
