[package]
name = "seeyoo_llm"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Multi-provider LLM client (Anthropic, OpenAI, Gemini, Ollama, Codex)"

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
async-trait     = { workspace = true }
tracing         = { workspace = true }
reqwest         = { workspace = true, features = ["json", "stream"] }
eventsource-stream = { workspace = true }
futures-util    = { workspace = true }
rand            = { workspace = true }
chrono          = { workspace = true }

[dependencies.ts-rs]
workspace = true
optional = true

[features]
bindings = ["dep:ts-rs"]
